Add Communication Between Windows

--- a/index.html
+++ b/index.html
@@ -61,29 +61,14 @@
         <script src="main.js"></script> -->
 
         <link rel="stylesheet" href="font.css">
-        <link rel="stylesheet" href="shpash-screen.css">
+        <link rel="stylesheet" href="style.css">
 
     </head>
 
     <body>
 
-        <div class="splash-screen">
-            <div class="splash-screen-title">
-                <img src="ikonaT.png">
-            </div>
-            <div class="splash-screen-loader">
-                <div class="spinner"></div>
-            </div>
-            <div class="splash-screen-load-info">
-                load: modules/save.js
-            </div>
-            <div class="splash-screen-footer">
-                By wiktortr
-            </div>
-        </div>
-
         <script>window.$ = window.jQuery = require('jquery');</script>
-        <script src="renderer.js"></script>
+        <script src="Renderer.js"></script>
 
     </body>
 
