Start work on modules

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <link rel="stylesheet" href="ResourcesStatic/css/font.css">
         <link rel="stylesheet" href="ResourcesStatic/css/style.css">
-        <script src="Renderer.js"></script>
+        <script src="loader.js"></script>
 
     </body>
 
