--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 
         <script type="text/javascript" src="Libraries/three.min.js"></script>
         <script>window.$ = window.jQuery = require('jquery');</script>
+        <script>
+        let editor = {
+            modules: new Array(),
+            modulesUsage: new Array(),
+            defaultLayout: null,
+            layout: null,
+        };
+        </script>
 
     </head>
 
