Add Menu & Fix Modules

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             modulesUsage: new Array(),
             defaultLayout: null,
             layout: null,
+            filename: null,
+            dirname: null,
         };
         </script>
 
