--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>EditorV2</title>
+        <title>VEngine</title>
         <meta charset="UTF-8">
 
         <script type="text/javascript" src="Libraries/three.min.js"></script>
