--- a/splashScreen.html
+++ b/splashScreen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>EditorV2</title>
+        <title>VEngine</title>
         <meta charset="UTF-8">
 
         <link rel="stylesheet" href="ResourcesStatic/css/font.css">
@@ -12,7 +12,7 @@
 
         <div class="splash-screen">
             <div class="splash-screen-title">
-                <img src="ResourcesStatic/icons/iconT.png">
+                <img src="ResourcesStatic/icons/icon.png">
             </div>
             <div class="splash-screen-loader">
                 <div class="spinner"></div>
