--- a/index.html
+++ b/index.html
@@ -5,25 +5,7 @@
         <meta charset="UTF-8">
 
         <script type="text/javascript" src="Libraries/three.min.js"></script>
-        <script>window.$ = window.jQuery = require('jquery');</script>
-        <script>
-        let editor = {
-            modules: new Array(),
-            modulesUsage: new Array(),
-            defaultLayout: null,
-            layout: null,
-            filename: null,
-            dirname: null,
-            project: null,
-        };
-        function CallFunctionFromModules(fun){
-            for (let i = 0; i < editor.modulesUsage.length; i++) {
-                if(editor.modulesUsage[i][fun] !== null && editor.modulesUsage[i][fun] !== undefined){
-                    editor.modulesUsage[i][fun](editor);
-                }
-            }
-        }
-        </script>
+        <script src="head.js"></script>
 
     </head>
 
