--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             filename: null,
             dirname: null,
             project: null,
-            selected: null,
+            selected: { type: "none" },
             export: {
                 full: false,
                 type: null
