--- a/Modules/object_settings2.html
+++ b/Modules/object_settings2.html
@@ -174,7 +174,7 @@
             <div class="bl"></div>
         </div>
         <div class="spot_light">
-            <span class="info">Angle:   </span> <input class="light_angle pp" type="number" value="1" step="0.1" min="0" max="1">
+            <span class="info">Angle:   </span> <input class="light_angle pp" type="number" value="1" step="0.1" min="0">
             <div class="bl"></div>
             <span class="info">Penumbra:</span> <input class="light_pen pp" type="number" value="1" step="0.1" min="0" max="1">
             <div class="bl"></div>
