Fix Move On Scene

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <title>VEngine</title>
         <meta charset="UTF-8">
 
-        <script type="text/javascript">window.$ = window.jQuery = require('jquery');</script>
-        <script type="text/javascript" src="Libraries/three.min.js"></script>
+        <script type="text/javascript">
+            window.$ = window.jQuery = require('jquery');
+            
+            const THREE = require("three");
+        </script>
+
         <script type="text/javascript">
         let editor = {
             THREE: null,
