--- a/Modules/scene.html
+++ b/Modules/scene.html
@@ -4,18 +4,18 @@
     </div>
     <div class="context_scene_nav">
         <div class="context_scene_nav_left">
-            <div class="scene_option scene_axis" title="axis">     <img draggable="false" src="ResourcesStatic/img/axis.png"></div>
-            <div class="scene_option scene_move" title="move"> <img draggable="false" src="ResourcesStatic/img/move.png"></div>
-            <div class="scene_option scene_rotation" title="rotation">    <img draggable="false" src="ResourcesStatic/img/rotation.png"></div>
-            <div class="scene_option scene_scale" title="scale">  <img draggable="false" src="ResourcesStatic/img/scale.png"></div>
+            <div class="scene_option scene_axis" title="axis"><img draggable="false" src="ResourcesStatic/img/axis.png"></div>
+            <div class="scene_option scene_move scene_active" title="move"><img draggable="false" src="ResourcesStatic/img/move.png"></div>
+            <div class="scene_option scene_rotation" title="rotation"><img draggable="false" src="ResourcesStatic/img/rotation.png"></div>
+            <div class="scene_option scene_scale" title="scale"><img draggable="false" src="ResourcesStatic/img/scale.png"></div>
             <div style="clear: both;"></div>
         </div>
         <div class="context_scene_nav_right">
-            <div    class="scene_option scene_find_file" title="browser"><span class="icon-folder"></span></div>
+            <div class="scene_option scene_find_file" title="browser"><span class="icon-folder"></span></div>
             <select class="scene_option scene_select"></select>
-            <div    class="scene_option scene_copy" title="copy"><span class="icon-docs"></span></div>
-            <div    class="scene_option scene_remove" title="remove"><span class="icon-cancel"></span></div>
-            <div    class="scene_option scene_add" title="add"><span class="icon-plus"></span></div>
+            <div class="scene_option scene_copy" title="copy"><span class="icon-docs"></span></div>
+            <div class="scene_option scene_remove" title="remove"><span class="icon-cancel"></span></div>
+            <div class="scene_option scene_add" title="add"><span class="icon-plus"></span></div>
             <div style="clear: both;"></div>
         </div>
         <div style="clear: both"></div>
