--- a/splashScreen/index.html
+++ b/splashScreen/index.html
@@ -4,15 +4,15 @@
         <title>VEngine</title>
         <meta charset="UTF-8">
 
-        <link rel="stylesheet" href="ResourcesStatic/css/font.css">
-        <link rel="stylesheet" href="ResourcesStatic/css/splashScreen.css">
+        <link rel="stylesheet" href="../ResourcesStatic/css/font.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
 
         <div class="splash-screen">
             <div class="splash-screen-title">
-                <img src="ResourcesStatic/icons/icon.png">
+                <img src="../ResourcesStatic/icons/icon.png">
             </div>
             <div class="splash-screen-loader">
                 <div class="spinner"></div>
@@ -25,8 +25,7 @@
             </div>
         </div>
 
-        <script>window.$ = window.jQuery = require('jquery');</script>
-        <script src="splashScreen.js"></script>
+        <script src="main.js"></script>
 
     </body>
 
