--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
             modulesUsage: new Array(),
             defaultLayout: null,
             layout: null,
-            project: {
-                filename: null,
-                dirname: null,
-            },
+            project: null,
             selected: { type: "none" },
         };
         </script>
